finished style for details

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "tunk": "^3.5.1",
+    "typewriter-effect": "^2.20.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
